// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#setup constructs UiSettingsClient and UiSettingsApi: UiSettingsApi args 1`] = `
[MockFunction MockUiSettingsApi] {
  "calls": Array [
    Array [
      Object {
        "addToPath": [MockFunction],
        "get": [MockFunction],
        "removeFromPath": [MockFunction],
      },
      "kibanaVersion",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`#setup constructs UiSettingsClient and UiSettingsApi: UiSettingsClient args 1`] = `
[MockFunction MockUiSettingsClient] {
  "calls": Array [
    Array [
      Object {
        "api": MockUiSettingsApi {
          "getLoadingCount$": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Object {
                  "loadingCountObservable": true,
                },
              },
            ],
          },
          "stop": [MockFunction],
        },
        "defaults": Object {
          "legacyInjectedUiSettingDefaults": true,
        },
        "initialSettings": Object {
          "legacyInjectedUiSettingUserValues": true,
        },
        "onUpdateError": [Function],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`#setup passes the uiSettings loading count to the loading count api: http.addLoadingCount calls 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loadingCountObservable": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
